--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<h1>test</h1>
+<button mat-raised-button color="primary">Primary colored button</button>
+<button mat-raised-button color="accent">Accent colored button</button>
+<button mat-raised-button color="warn">Warn colored button</button>
