--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<button mat-raised-button color="primary">Primary colored button</button>
-<button mat-raised-button color="accent">Accent colored button</button>
-<button mat-raised-button color="warn">Warn colored button</button>
+<div class="container">
+    <app-backup-plans-list></app-backup-plans-list>
+    <app-backup-plan></app-backup-plan>
+</div>
