--- a/src/app/components/backup-plan/backup-plan.component.html
+++ b/src/app/components/backup-plan/backup-plan.component.html
@@ -1,5 +1,9 @@
 <div class="container">
     <div class="plan_holder mat-elevation-z4" *ngIf="getSelectedPlan()">
+        <div class="plan_activater mat-elevation-z2" matRipple (click)="startBackup()">
+            <div class="plan_activater_loader" [ngStyle]="getLoaderStyle()"></div>
+            <div>{{getLoaderText()}}</div>
+        </div>
         <input class="plan_name" type="text" [(ngModel)]="getSelectedPlan().name" (focusout)="updateSelectedPlan()">
     </div>
 </div>
