--- a/src/app/components/backup-plan/backup-plan.component.html
+++ b/src/app/components/backup-plan/backup-plan.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="plan_holder mat-elevation-z4" *ngIf="getSelectedPlan()">
-        <div class="plan_activater mat-elevation-z2" matRipple (click)="startBackup()">
+        <div class="plan_activater mat-elevation-z2" matRipple (click)="startBackup()" [class.plan_activater_disabled]="getProgress() !== undefined">
             <div class="plan_activater_loader" [ngStyle]="getLoaderStyle()"></div>
             <div>{{getLoaderText()}}</div>
         </div>
