--- a/src/app/components/backup-plan/backup-plan.component.html
+++ b/src/app/components/backup-plan/backup-plan.component.html
@@ -1,9 +1,10 @@
 <div class="container">
     <div class="plan_holder mat-elevation-z4" *ngIf="getSelectedPlan()">
-        <div class="plan_activater mat-elevation-z2" matRipple (click)="startBackup()" [class.plan_activater_disabled]="getProgress() !== undefined">
-            <div class="plan_activater_loader" [ngStyle]="getLoaderStyle()"></div>
-            <div>{{getLoaderText()}}</div>
-        </div>
+        <app-loader [backupPlan]="getSelectedPlan()"></app-loader>
+        
         <input class="plan_name" type="text" [(ngModel)]="getSelectedPlan().name" (focusout)="updateSelectedPlan()">
+
+        <app-dirs-keeper [name]="'Backup source folders'" [dirs]="getSelectedPlan().sourceDirs"></app-dirs-keeper>
+        <app-dirs-keeper [name]="'Backup target folders'" [dirs]="getSelectedPlan().targetDirs"></app-dirs-keeper>
     </div>
 </div>
