--- a/src/app/components/backup-plan/backup-plan.component.scss
+++ b/src/app/components/backup-plan/backup-plan.component.scss
@@ -9,43 +9,20 @@
 }
 
 .plan_holder {
-    width: 95%;
-    height: 95%;
+    height: -webkit-fill-available;
+    width: -webkit-fill-available;
     background-color: rgb(71, 71, 71);
     border-radius: 10px;
-    margin: 10px;
-}
-
-.plan_activater {
+    padding: 20px;
     margin: 20px;
-    margin-bottom: 0px;
-    width: -webkit-fill-available;
-    height: 40px;
-    background-color: mat-color($primary);
-    cursor: pointer;
-    border-radius: 2px;
-    display: flex;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    user-select: none;
-}
-.plan_activater_disabled {
-    cursor: wait !important;
-}
-.plan_activater_loader {
-    width: 600px;
-    height: 40px;
-    background-color: rgba(0, 0, 0, 0.171);
-    position: absolute;
-    transition: all 0.3s ease;
 }
 
 .plan_name {
     all: unset;
-    margin: 20px;
     margin-top: 10px;
+    margin-bottom: 10px;
     padding: 5px;
+    padding-left: 0px;
     font-size: 1.8em;
     width: -webkit-fill-available;
     background: rgba(255, 255, 255, 0);
