--- a/src/app/components/backup-plan/backup-plan.component.html
+++ b/src/app/components/backup-plan/backup-plan.component.html
@@ -2,7 +2,12 @@
     <div class="plan_holder mat-elevation-z4" *ngIf="getSelectedPlan()">
         <app-loader [backupPlan]="getSelectedPlan()"></app-loader>
         
-        <input class="plan_name" type="text" [(ngModel)]="getSelectedPlan().name" (focusout)="updateSelectedPlan()">
+        <div class="name_container">
+            <input class="plan_name" type="text" [(ngModel)]="getSelectedPlan().name" (focusout)="updateSelectedPlan()">
+            <div class="delete_button" (click)="deleteSelectedPlan()">
+                <mat-icon>delete_outline</mat-icon>
+            </div>
+        </div>
 
         <app-dirs-keeper [name]="'Backup source folders'" [dirs]="getSelectedPlan().sourceDirs"></app-dirs-keeper>
         <app-dirs-keeper [name]="'Backup target folders'" [dirs]="getSelectedPlan().targetDirs"></app-dirs-keeper>
