--- a/src/app/components/backup-plan/dirs-keeper/dirs-keeper.component.html
+++ b/src/app/components/backup-plan/dirs-keeper/dirs-keeper.component.html
@@ -1,7 +1,13 @@
-<p class="header">{{name}}:</p>
+<!-- TODO verbeteren -->
+<div style="display: flex;">
+    <p style="width: 100%;">{{name}}:</p>
+    <button (click)="openSelector()">open</button>
+</div>
+<!-- <p class="header">{{name}}:</p> -->
 <div class="dirs_list mat-elevation-z1">
     <div class="dir" *ngFor="let dir of dirs">
         <p>{{dir}}</p>
+
         <div class="spacer"></div>
         <div class="buttons_list">
             <div class="action_button" (click)="openFolder(dir)">
