--- a/src/app/components/backup-plans-list/backup-plans-list.component.html
+++ b/src/app/components/backup-plans-list/backup-plans-list.component.html
@@ -6,7 +6,7 @@
             {{plan.name}}
         </div>
     </div>
-    <div class="plan add_plan" (click)="addPlan()" matRipple>
+    <div class="plan add_plan mat-elevation-z2" (click)="addPlan()" matRipple>
         <mat-icon>add</mat-icon>
     </div>
 </div>
