--- a/src/app/components/backup-plan/backup-plan.component.html
+++ b/src/app/components/backup-plan/backup-plan.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="plan_holder mat-elevation-z4" *ngIf="getSelectedPlan()">
         <app-loader [backupPlan]="getSelectedPlan()"></app-loader>
-        
+
         <div class="name_container">
             <input class="plan_name" type="text" [(ngModel)]="getSelectedPlan().name" (focusout)="updateSelectedPlan()">
             <div class="delete_button" (click)="deleteSelectedPlan()">
@@ -9,7 +9,9 @@
             </div>
         </div>
 
-        <app-dirs-keeper [name]="'Backup source folders'" [dirs]="getSelectedPlan().sourceDirs"></app-dirs-keeper>
-        <app-dirs-keeper [name]="'Backup target folders'" [dirs]="getSelectedPlan().targetDirs"></app-dirs-keeper>
+        <app-dirs-keeper [name]="'Backup source folders'" [dirs]="getSelectedPlan().sourceDirs"
+            (onDirsUploaded)="onSourceDirsUploaded($event)"></app-dirs-keeper>
+        <app-dirs-keeper [name]="'Backup target folders'" [dirs]="getSelectedPlan().targetDirs"
+            (onDirsUploaded)="onTargetDirsUploaded($event)"></app-dirs-keeper>
     </div>
 </div>
