--- a/src/app/dialogs/dirs-picker/dirs-picker.dialog.html
+++ b/src/app/dialogs/dirs-picker/dirs-picker.dialog.html
@@ -1,14 +1,23 @@
 <div class="dialog_container">
 
-    <div class="dialog_title">
-        <h1 mat-dialog-title>Select files and/or folders</h1>
+  <div class="dialog_title">
+    <h1 mat-dialog-title>Select files and/or folders</h1>
+    <div class="droparea" (drop)="drop($event)" (dragover)="dragOver($event)" (dragenter)="dragEnter($event)"
+      (dragleave)="dragLeave($event)" [class.droparea_dragging]="isDragging">
+      <p>Drop files/folder in here</p>
     </div>
+  </div>
 
-    <div class="dialog_body">
+  <div class="dialog_body">
+    <ul>
+      <li *ngFor="let dir of directories">{{dir}}</li>
+    </ul>
+  </div>
 
+  <div class="dialog_footer">
+    <div mat-dialog-actions>
+      <button class="mat-elevation-z2" (click)="cancel()" matRipple>Cancel</button>
+      <button class="mat-elevation-z2" (click)="submit()" matRipple>Submit</button>
     </div>
-
-    <div class="dialog_footer">
-
-    </div>
+  </div>
 </div>
