--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
     <app-backup-plans-list></app-backup-plans-list>
     <app-backup-plan></app-backup-plan>
+    <app-settings></app-settings>
 </div>
