--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="settings_button mat-app-background mat-elevation-z4" (click)="openSettings()" matRipple>
+    <div class="settings_button mat-app-background" (click)="openSettings()" matRipple>
         <mat-icon>settings</mat-icon>
     </div>
 </div>
